[gd_scene load_steps=17 format=3 uid="uid://cm6pb4a0kyv4m"]

[ext_resource type="Texture2D" uid="uid://bowtf7ye6fsbs" path="res://icon.svg" id="1_cmegs"]
[ext_resource type="Script" uid="uid://6j8xgw5owe8i" path="res://addons/CardGameSkeleton/AddonScripts/DockControl.gd" id="1_nvx3w"]
[ext_resource type="Script" uid="uid://ce4j7sxhv1alt" path="res://addons/CardGameSkeleton/CardLibrary/CardLibrary.gd" id="2_oaa6h"]
[ext_resource type="Script" uid="uid://benn2aran64n6" path="res://addons/CardGameSkeleton/CGSMenuButton.gd" id="2_wyu0a"]
[ext_resource type="Texture2D" uid="uid://cax1mfkf7phhf" path="res://addons/CardGameSkeleton/Images/Cards.png" id="3_d1ocy"]
[ext_resource type="Resource" uid="uid://djc5t44vso6ar" path="res://addons/CardGameSkeleton/Resources/ProjectAttributes.tres" id="3_jh84h"]
[ext_resource type="Script" uid="uid://b1ipskycyw4oe" path="res://addons/CardGameSkeleton/CardLibrary/LoadCard.gd" id="3_l3a64"]
[ext_resource type="Script" uid="uid://chbsf4oc2bglf" path="res://addons/CardGameSkeleton/CardLibrary/SaveCard.gd" id="5_befsg"]
[ext_resource type="Texture2D" uid="uid://v4p0bmiacq07" path="res://addons/CardGameSkeleton/Images/Decks.png" id="5_ndwi4"]
[ext_resource type="Texture2D" uid="uid://ueeherr70c32" path="res://addons/CardGameSkeleton/Images/AddNewCard.png" id="5_s1a8j"]
[ext_resource type="Texture2D" uid="uid://l8xt0vsxemah" path="res://addons/CardGameSkeleton/Images/Configuration.png" id="6_ndwi4"]
[ext_resource type="PackedScene" uid="uid://dscpfc825fla0" path="res://addons/CardGameSkeleton/AbstractCard2D.tscn" id="6_pty6m"]
[ext_resource type="Script" uid="uid://cb0o3fha5uvaa" path="res://addons/CardGameSkeleton/Menus/CardMenu.gd" id="9_m4a4o"]
[ext_resource type="Script" uid="uid://ky05a2wvdijt" path="res://addons/CardGameSkeleton/Menus/NewCardMenu.gd" id="10_bjggg"]
[ext_resource type="PackedScene" uid="uid://dqkm4gg7p68af" path="res://addons/CardGameSkeleton/Resources/AttributeField.tscn" id="11_6u1yj"]
[ext_resource type="PackedScene" uid="uid://bp3ogheafjf1u" path="res://addons/CardGameSkeleton/Menus/ManageAttributesMenu.tscn" id="15_rrna7"]

[node name="CardGameSkeleton" type="Control" node_paths=PackedStringArray("main_menu", "card_menu", "deck_menu", "configuration_menu")]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_nvx3w")
main_menu = NodePath("MainMenu")
card_menu = NodePath("CardMenu")
deck_menu = NodePath("DeckMenu")
configuration_menu = NodePath("NewCardMenu")

[node name="CardJSONManager" type="Node" parent="." node_paths=PackedStringArray("card_loader")]
script = ExtResource("2_oaa6h")
card_loader = NodePath("CardLoader")
settings_resource = ExtResource("3_jh84h")

[node name="CardLoader" type="Node" parent="CardJSONManager"]
script = ExtResource("3_l3a64")

[node name="MainMenu" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Cards" type="TextureButton" parent="MainMenu/VBoxContainer/HBoxContainer" node_paths=PackedStringArray("menu_to_show")]
layout_mode = 2
texture_normal = ExtResource("3_d1ocy")
script = ExtResource("2_wyu0a")
message = "Cards"
menu_to_show = NodePath("../../../../CardMenu")

[node name="Decks" type="TextureButton" parent="MainMenu/VBoxContainer/HBoxContainer" node_paths=PackedStringArray("menu_to_show")]
layout_mode = 2
texture_normal = ExtResource("5_ndwi4")
script = ExtResource("2_wyu0a")
message = "Decks"
menu_to_show = NodePath("../../../../DeckMenu")

[node name="Configuration" type="TextureButton" parent="MainMenu/VBoxContainer" node_paths=PackedStringArray("menu_to_show")]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("6_ndwi4")
script = ExtResource("2_wyu0a")
message = "Configuration"
menu_to_show = NodePath("../../../ConfigurationMenu")

[node name="CardMenu" type="MarginContainer" parent="." node_paths=PackedStringArray("card_library", "grid_container")]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("9_m4a4o")
card_library = NodePath("../CardJSONManager")
grid_container = NodePath("GridContainer")

[node name="GridContainer" type="GridContainer" parent="CardMenu"]
layout_mode = 2
columns = 3

[node name="BackToMainMenu" type="Button" parent="CardMenu/GridContainer"]
layout_mode = 2
text = "< Back"

[node name="Card1" type="TextureButton" parent="CardMenu/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_cmegs")

[node name="Card2" type="TextureButton" parent="CardMenu/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_cmegs")

[node name="Card3" type="TextureButton" parent="CardMenu/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_cmegs")

[node name="Card4" type="TextureButton" parent="CardMenu/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_cmegs")

[node name="DeckMenu" type="MarginContainer" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GridContainer" type="GridContainer" parent="DeckMenu"]
layout_mode = 2
columns = 3

[node name="BackToMainMenu" type="Button" parent="DeckMenu/GridContainer"]
layout_mode = 2
text = "< Back"

[node name="Deck1" type="TextureButton" parent="DeckMenu/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_cmegs")

[node name="Deck2" type="TextureButton" parent="DeckMenu/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_cmegs")

[node name="Deck3" type="TextureButton" parent="DeckMenu/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_cmegs")

[node name="Deck4" type="TextureButton" parent="DeckMenu/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("1_cmegs")

[node name="ConfigurationMenu" type="MarginContainer" parent="."]
visible = false
layout_mode = 0
offset_right = 392.0
offset_bottom = 260.0

[node name="GridContainer" type="GridContainer" parent="ConfigurationMenu"]
layout_mode = 2
columns = 3

[node name="BackToMainMenu" type="Button" parent="ConfigurationMenu/GridContainer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "< Back"

[node name="NewCard" type="TextureButton" parent="ConfigurationMenu/GridContainer" node_paths=PackedStringArray("menu_to_show")]
layout_mode = 2
texture_normal = ExtResource("5_s1a8j")
script = ExtResource("2_wyu0a")
message = "New Card"
menu_to_show = NodePath("../../../NewCardMenu")

[node name="ManageAttributes" type="Button" parent="ConfigurationMenu/GridContainer" node_paths=PackedStringArray("menu_to_show")]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Manage
Attributes"
autowrap_mode = 2
script = ExtResource("2_wyu0a")
message = "Manage Attributes"
menu_to_show = NodePath("../../../ManageAttributesMenu")

[node name="NewCardMenu" type="MarginContainer" parent="." node_paths=PackedStringArray("fields_container", "card_library")]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("10_bjggg")
field_scene = ExtResource("11_6u1yj")
fields_container = NodePath("OverallMenu/VBoxContainer")
card_library = NodePath("../CardJSONManager")

[node name="OverallMenu" type="VBoxContainer" parent="NewCardMenu"]
layout_mode = 2
alignment = 1

[node name="LastMenu" type="Button" parent="NewCardMenu/OverallMenu"]
layout_mode = 2
text = "< Back"

[node name="HSeparator" type="HSeparator" parent="NewCardMenu/OverallMenu"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NewCardMenu/OverallMenu"]
layout_mode = 2

[node name="SaveCard" type="Button" parent="NewCardMenu/OverallMenu" node_paths=PackedStringArray("card_json_manager", "fields_container")]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "Save Card"
script = ExtResource("5_befsg")
card_json_manager = NodePath("../../../CardJSONManager")
card_scene = ExtResource("6_pty6m")
fields_container = NodePath("../VBoxContainer")

[node name="ManageAttributesMenu" parent="." node_paths=PackedStringArray("card_library") instance=ExtResource("15_rrna7")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1
card_library = NodePath("../CardJSONManager")

[node name="VBoxContainer" parent="ManageAttributesMenu" index="0"]
custom_minimum_size = Vector2(384, 0)
alignment = 1

[node name="TypeInput" parent="ManageAttributesMenu/VBoxContainer/HBoxContainer2" index="1"]
selected = 0
item_count = 3
popup/item_0/text = "Text"
popup/item_0/id = 0
popup/item_1/text = "Number"
popup/item_1/id = 1
popup/item_2/text = "Selection"
popup/item_2/id = 2

[connection signal="pressed" from="CardMenu/GridContainer/BackToMainMenu" to="." method="show_main_menu"]
[connection signal="pressed" from="DeckMenu/GridContainer/BackToMainMenu" to="." method="show_main_menu"]
[connection signal="pressed" from="ConfigurationMenu/GridContainer/BackToMainMenu" to="." method="show_main_menu"]
[connection signal="pressed" from="NewCardMenu/OverallMenu/LastMenu" to="." method="show_last_menu"]
[connection signal="pressed" from="NewCardMenu/OverallMenu/SaveCard" to="NewCardMenu/OverallMenu/SaveCard" method="on_pressed"]
[connection signal="pressed" from="ManageAttributesMenu/VBoxContainer/BackButton" to="." method="show_last_menu"]

[editable path="ManageAttributesMenu"]
